# Binance-API-Calling

./: .gitignore  pyproject.toml
requests/: get_future_trading_history.py  get_path.py
requests/downloads/: orderbook_history.json
