[tool.poetry]
name = "binance_python_api"
version = "0.1.0"
description = ""
authors = ["beegramin9 <beegramin9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
aiohttp = "^3.8.1"
dateparser = "^1.1.1"
ujson = "^5.3.0"
websockets = "^10.3"
binance = "^0.3"
python-binance = "^1.0.16"
pytest = "^7.1.2"
requests-mock = "^1.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
